imagesフォルダの追加
画像の追加

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <p>ポートフォリオ</p>
+    <img src="images/dummy_ 640x480.jpg" alt="" />
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
