_commom.scssファイルの作成
・このファイルに共通の記述をする
・google fontsを読み込んだ

--- a/index.html
+++ b/index.html
@@ -1,16 +1,40 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>portfolio</title>
-    <link rel="stylesheet" href="styles/style.css" />
-  </head>
-  <body>
-    <p>ポートフォリオ</p>
-    <img src="images/dummy_ 640x480.jpg" alt="" />
-
-    <script src="scripts/main.js"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>portfolio</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Kameron:wght@400;700&family=Noto+Sans+JP:wght@500&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="styles/vendors/css-reset.css" />
+        <link rel="stylesheet" href="styles/style.css" />
+    </head>
+    <body>
+        <p>Hello</p>
+        <div class="global-container">
+            <div class="container">
+                <div class="mobile-menu-cover"></div>
+                <div class="nav-trigger"></div>
+                <header class="header"></header>
+                <content>
+                    <div class="hero"></div>
+                    <main-content>
+                        <aside></aside>
+                        <main>
+                            <section class="introduction"></section>
+                            <section class="skills"></section>
+                            <section class="works"></section>
+                        </main>
+                    </main-content>
+                </content>
+                <footer class="footer"></footer>
+            </div>
+            <div class="mobile-menu"></div>
+        </div>
+    </body>
 </html>
