初期要素の削除
リンクの読み込み確認のために用意していた要素を削除した。

--- a/index.html
+++ b/index.html
@@ -15,12 +15,37 @@
         <link rel="stylesheet" href="styles/style.css" />
     </head>
     <body>
-        <p>Hello</p>
         <div class="global-container">
             <div class="container">
                 <div class="mobile-menu-cover"></div>
                 <div class="nav-trigger"></div>
-                <header class="header"></header>
+                <header class="header">
+                    <div class="header__inner">
+                        <a href="#" class="logo item">
+                            <img src="images/github-icon.png" alt="Githubのアイコン" />
+                            <span class="logo__github">Github</span>
+                        </a>
+                        <nav class="header__nav">
+                            <ul class="header__ul">
+                                <li class="header__li item">
+                                    <a href="#">introduction</a>
+                                </li>
+                                <li class="header__li item">
+                                    <a href="#">works</a>
+                                </li>
+                                <li class="header__li item">
+                                    <a href="#">skills</a>
+                                </li>
+                            </ul>
+                        </nav>
+                        <button class="mobile-menu__btn">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </button>
+                    </div>
+                </header>
+                <!-- header -->
                 <content>
                     <div class="hero"></div>
                     <main-content>
