--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
                 </header>
                 <!-- header -->
-                <content>
+                <content class="content">
                     <div class="hero"></div>
                     <main-content>
                         <aside></aside>
@@ -60,7 +60,27 @@
                         </main>
                     </main-content>
                 </content>
-                <footer class="footer"></footer>
+                <footer class="footer">
+                    <div class="logo item">
+                        <a href="#" class="">
+                            <img src="images/github-icon.png" alt="Githubのアイコン" />
+                            <span class="logo__github">Github</span>
+                        </a>
+                    </div>
+                    <nav class="footer__nav">
+                        <ul class="footer__ul">
+                            <li class="footer__li item">
+                                <a href="#">introduction</a>
+                            </li>
+                            <li class="footer__li item">
+                                <a href="#">works</a>
+                            </li>
+                            <li class="footer__li item">
+                                <a href="#">skills</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </footer>
             </div>
             <nav class="mobile-menu">
                 <div class="logo item">
