--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
                 <content class="content">
                     <div class="hero"></div>
                     <main-content>
-                        <aside></aside>
+                        <aside class="side">
+                            <div class="side__inner">
+                                <a href="" class="github icon">Github</a>
+                            </div>
+                        </aside>
                         <main>
                             <section class="introduction"></section>
                             <section class="skills"></section>
