skillsのカードを追加
・skillカードを追加
・モバイル時、1列
・PC時、2列

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" href="styles/vendors/css-reset.css" />
+
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
+        />
+
         <link rel="stylesheet" href="styles/style.css" />
 
         <script src="scripts/libs/mobile-menu.js" defer></script>
@@ -59,7 +65,36 @@
                         </aside>
                         <main>
                             <section class="introduction"></section>
-                            <section class="skills"></section>
+                            <section class="skills">
+                                <div class="card">
+                                    <i class="card__img devicon-javascript-plain"></i>
+                                    <div class="card__content">
+                                        <p class="card__title">JavaScript</p>
+                                        <p class="card__desc">JavaScriptの説明が入ります</p>
+                                    </div>
+                                </div>
+                                <div class="card">
+                                    <i class="card__img devicon-javascript-plain"></i>
+                                    <div class="card__content">
+                                        <p class="card__title">JavaScript</p>
+                                        <p class="card__desc">JavaScriptの説明が入ります</p>
+                                    </div>
+                                </div>
+                                <div class="card">
+                                    <i class="card__img devicon-javascript-plain"></i>
+                                    <div class="card__content">
+                                        <p class="card__title">JavaScript</p>
+                                        <p class="card__desc">JavaScriptの説明が入ります</p>
+                                    </div>
+                                </div>
+                                <div class="card">
+                                    <i class="card__img devicon-javascript-plain"></i>
+                                    <div class="card__content">
+                                        <p class="card__title">JavaScript</p>
+                                        <p class="card__desc">JavaScriptの説明が入ります</p>
+                                    </div>
+                                </div>
+                            </section>
                             <section class="works"></section>
                         </main>
                     </main-content>
