セクションタイトルのパーツ化
・画面内にタイトルが入ってきたら下線を引くようなアニメーションを付ける

--- a/index.html
+++ b/index.html
@@ -66,32 +66,38 @@
                         <main>
                             <section class="introduction"></section>
                             <section class="skills">
-                                <div class="card">
-                                    <i class="card__img devicon-javascript-plain"></i>
-                                    <div class="card__content">
-                                        <p class="card__title">JavaScript</p>
-                                        <p class="card__desc">JavaScriptの説明が入ります</p>
+                                <div class="skills__inner">
+                                    <div class="section-title">
+                                        <p class="main-title">Skills</p>
+                                        <p class="sub-title">スキル</p>
                                     </div>
-                                </div>
-                                <div class="card">
-                                    <i class="card__img devicon-javascript-plain"></i>
-                                    <div class="card__content">
-                                        <p class="card__title">JavaScript</p>
-                                        <p class="card__desc">JavaScriptの説明が入ります</p>
+                                    <div class="card">
+                                        <i class="card__img devicon-javascript-plain colored"></i>
+                                        <div class="card__content">
+                                            <p class="card__title">JavaScript</p>
+                                            <p class="card__desc">JavaScriptの説明が入ります</p>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="card">
-                                    <i class="card__img devicon-javascript-plain"></i>
-                                    <div class="card__content">
-                                        <p class="card__title">JavaScript</p>
-                                        <p class="card__desc">JavaScriptの説明が入ります</p>
+                                    <div class="card">
+                                        <i class="card__img devicon-vuejs-plain colored"></i>
+                                        <div class="card__content">
+                                            <p class="card__title">Vue.js</p>
+                                            <p class="card__desc">Vue.jsの説明が入ります</p>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="card">
-                                    <i class="card__img devicon-javascript-plain"></i>
-                                    <div class="card__content">
-                                        <p class="card__title">JavaScript</p>
-                                        <p class="card__desc">JavaScriptの説明が入ります</p>
+                                    <div class="card">
+                                        <i class="card__img devicon-github-original colored"></i>
+                                        <div class="card__content">
+                                            <p class="card__title">Github</p>
+                                            <p class="card__desc">Githubの説明が入ります</p>
+                                        </div>
+                                    </div>
+                                    <div class="card">
+                                        <i class="card__img devicon-sass-original colored"></i>
+                                        <div class="card__content">
+                                            <p class="card__title">SASS</p>
+                                            <p class="card__desc">SASSの説明が入ります</p>
+                                        </div>
                                     </div>
                                 </div>
                             </section>
